--- a/style.css
+++ b/style.css
@@ -380,7 +380,7 @@ a:active {
 .comment-meta,
 .comment-author,
 #reply-title {
-	font-family: Baskerville, 'Times New Roman', serif;
+	font-family: Comic Sans MS, 'Times New Roman', serif;
 }
 
 
