--- a/style.css
+++ b/style.css
@@ -425,7 +425,7 @@ width: 100%;
 ----------------------------------------------- */
 
 .site-header hgroup {
-	background:url("http://localhost:8888/wp-content/uploads/2014/05/testlogo_2-copy1.jpg") center right no-repeat;
+	background:url("http://megnanimously.com/wp-content/uploads/2014/06/testlogo_2-copy.jpg") center right no-repeat;
 	background-size: contain;
 	background-color: white;
 	padding: 1.18em 2.18em;
