--- a/layouts/content-sidebar.css
+++ b/layouts/content-sidebar.css
@@ -1,22 +1,22 @@
-/* =Structure
------------------------------------------------ */
-#primary {
-float: left;
-margin: 0 -25% 0 0;
-width: 100%;
+/*
+Theme Name: _s
+Layout: Content-Sidebar
+*/
+
+.content-area {
+	float: left;
+	margin: 0 -25% 0 0;
+	width: 100%;
 }
-#content {
-margin: 0 25% 0 0;
+.site-main {
+	margin: 0 25% 0 0;
 }
-#secondary { /* Sidebar 1 */
-float: right;
-overflow: hidden;
-width: 25%;
-}
-#tertiary { /* Sidebar 2 */
-clear: right;
+.site-content .widget-area {
+	float: right;
+	overflow: hidden;
+	width: 25%;
 }
 .site-footer {
-clear: both;
-width: 100%;
+	clear: both;
+	width: 100%;
 }
