--- a/layouts/sidebar-content.css
+++ b/layouts/sidebar-content.css
@@ -1,23 +1,22 @@
-/* =Structure
------------------------------------------------ */
- 
-#primary {
-float: right;
-margin: 0 0 0 -25%;
-width: 100%;
+/*
+Theme Name: _s
+Layout: Sidebar-Content
+*/
+
+.content-area {
+	float: right;
+	margin: 0 0 0 -25%;
+	width: 100%;
 }
-#content {
-margin: 0 0 0 25%;
+.site-main {
+	margin: 0 0 0 25%;
 }
-#secondary { /* Sidebar 1 */
-float: left;
-overflow: hidden;
-width: 25%;
-}
-#tertiary { /* Sidebar 2 */
-clear: left;
+.site-content .widget-area {
+	float: left;
+	overflow: hidden;
+	width: 25%;
 }
 .site-footer {
-clear: both;
-width: 100%;
+	clear: both;
+	width: 100%;
 }
