--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ input,
 select,
 textarea {
 	color: #404040;
-	font-family: Trebuchet MS;
+	font-family: "Georgia";
 	font-size: 14px;
 	line-height: 1.5;
 }
@@ -150,7 +150,7 @@ address {
 }
 pre {
 	background: #eee;
-	font-family: "Courier 10 Pitch", Courier, monospace;
+	font-family: Georgia;
 	font-size: 15px;
 	font-size: 1.5rem;
 	line-height: 1.6;
@@ -353,20 +353,24 @@ a:active {
 
 /* =Structure
 ----------------------------------------------- */
+
 #page {
 	/*border: 2px solid yellow;*/
 	margin: auto;
-	width: 86em;
-	border-left: 2px dashed #e6e6e6;
-	border-right: 2px dashed #e6e6e6;
+	width: 100%;
 }
 
 #masthead {
-	/*border: 2px solid purple;*/
+/*	border: 2px solid purple;*/
 	float: left;
 	width: 100%;
 	margin: auto;
-	margin-top: 30px;
+	margin-top: 0px;
+	height: 500px;
+	background-image: url('blog_030415_33.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
 	
 }
 
@@ -374,8 +378,8 @@ a:active {
 
 #site-navigation {
 	float: left;
-	margin-top: 40px;
-	padding-left: 23%;
+	margin-top: 0;
+	padding-left: 20%;
 	padding-top: 5px;
 	width: 100%;
 	height: 30px;
@@ -408,7 +412,7 @@ padding-right: 10px;
 clear: both;
 width: 100%;
 background: #e6e6e6;
-font-family: Baskerville;
+font-family: Georgia;
 font-size: 14px;
 text-align: center;
 }
@@ -430,15 +434,15 @@ text-align: center;
 .main-navigation ul {
 	list-style: none;
 	margin: 0;
-	padding-left: 0;
-	font-family: Baskerville;
+	font-family: Georgia;
+	font-size: 12px;
 	text-transform: uppercase;
-	letter-spacing: 9px;
+	letter-spacing: 5px;
 }
 .main-navigation li {
 	float: left;
 	position: relative;
-	padding-left: 50px;
+	padding-left: 15px;
 }
 .main-navigation a {
 	display: block;
@@ -477,7 +481,26 @@ text-align: center;
 .main-navigation .current_page_item a,
 .main-navigation .current-menu-item a {
 }
+
+/*Sticky Header*/
+
+#thsp-sticky-header a {
+	font-family: "Gill Sans";
+	font-size: 18px;
+	text-transform: uppercase;
+}
+
+#thsp-sticky-header li a {
+	font-family: Georgia;
+	font-size: 12px;
+}
+
+#thsp-sticky-header {
+	box-shadow: 0px 1px 5px #888888;
+}
+
 /* Small menu */
+
 .menu-toggle {
 	display: none;
 }
@@ -502,7 +525,7 @@ text-align: center;
 .post-navigation .nav-previous {
 	float: left;
 	width: 50%;
-	font-family: Baskerville;
+	font-family: Georgia;
 	color: black;
 }
 .comment-navigation .nav-next,
@@ -511,7 +534,7 @@ text-align: center;
 	float: right;
 	text-align: right;
 	width: 50%;
-	font-family: Baskerville;
+	font-family: Georgia;
 }
 
 
@@ -613,8 +636,8 @@ text-align: center;
 }
 
 .widget-title {
-	font-family: Janda Elegant Handwriting, cursive;
-	color: #5EC9AF;
+	font-family: "Gill Sans";
+	color: #000000;
 	font-size: 20px;
 	letter-spacing: 3px;
 }
@@ -622,7 +645,7 @@ text-align: center;
 .widget a{
 	color: black;
 	text-decoration: none;
-	font-family: Baskerville;
+	font-family: Georgia;
 	font-size: 1em;
 }
 
@@ -641,7 +664,7 @@ text-align: center;
 }
 
 .widget_categories a{
-	font-family: Baskerville, serif;
+	font-family: Georgia;
 }
 	
 .widget_categories .widget-title{
@@ -681,27 +704,41 @@ text-align: center;
 	margin: 0 0 1.5em;
 }
 .entry-title {
-	font-family: Janda Elegant Handwriting, cursive;
-	font-size: 24px;
-	letter-spacing: 3px;
+	font-family: "Gill Sans";
+	font-size: 35px;
+	text-align: center;
 }
 .entry-title a {
-	color: #5EC9AF;
+	color: #000000;
 	text-decoration: none;
 }
 .entry-meta {
 	font-size: 10px;
 	color: black;
+	text-align: center;
 }
-.entry-meta a{
+.entry-meta .posted-on a{
 	color: black;
+	text-decoration: none;
+	font-style: italic;
+	border-right: 1px solid black;
+	padding-right: 4px;
+}
+
+.entry-meta .cat-links a {
+	text-transform: uppercase;
+	text-decoration: none;
+	padding-left: 4px;
 }
 .entry-footer {
 	font-size: 12px;
-	color: #5EC9AF;
+	color: #e6e6e6;
+	font-family: Georgia;
+	text-align: center;
+	text-transform: uppercase;
 }
 .entry-footer a{
-	color: #5EC9AF;
+	color: #000000;
 }
 
 /*--------------------------------------------------------------
