--- a/style.css
+++ b/style.css
@@ -393,16 +393,6 @@ a:active {
 	box-shadow: 0px 1px 5px #888888;	
 }
 
-#site-navigation-index {
-	float: left;
-	margin-top: 0;
-	padding-left: 20%;
-	padding-top: 5px;
-	width: 100%;
-	height: 30px;
-	background-color: #e6e6e6;
-}
-
 #primary {
 float: left;
 margin-top: 70px;
@@ -444,63 +434,7 @@ text-align: center;
 5.2 Menus
 --------------------------------------------------------------*/
 
-/* Navigation - Index */
-.main-navigation-index {
-	clear: both;
-	width: 100%;
-}
-.main-navigation-index ul {
-	list-style: none;
-	margin: 0;
-	font-family: Georgia;
-	font-size: 12px;
-	text-transform: uppercase;
-	letter-spacing: 5px;
-}
-.main-navigation-index li {
-	float: left;
-	position: relative;
-	padding-left: 15px;
-}
-.main-navigation-index a {
-	display: block;
-	text-decoration: none;
-	color: black;
-}
-.main-navigation-index ul ul {
-	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-	float: left;
-	position: absolute;
-	top: 1.5em;
-	left: -999em;
-	z-index: 99999;
-}
-.main-navigation-index ul ul ul {
-	left: -999em;
-	top: 0;
-}
-.main-navigation-index ul ul a {
-	width: 200px;
-}
-.main-navigation-index ul ul li {
-}
-.main-navigation-index li:hover > a {
-}
-.main-navigation-index ul ul :hover > a {
-}
-.main-navigation-index ul ul a:hover {
-}
-.main-navigation-index ul li:hover > ul {
-	left: auto;
-}
-.main-navigation-index ul ul li:hover > ul {
-	left: 100%;
-}
-.main-navigation-index .current_page_item a,
-.main-navigation-index .current-menu-item a {
-}
-
-/* Navigation - Pages */
+/* Navigation */
 
 #thsp-sticky-header a {
 	font-family: "Gill Sans";
@@ -512,8 +446,6 @@ text-align: center;
 	font-family: Georgia;
 	font-size: 12px;
 }
-
-
 
 .main-navigation {
 	clear: both;
