--- a/style.css
+++ b/style.css
@@ -374,23 +374,48 @@ a:active {
 	
 }
 
-#thsp-sticky-header {
+#transparency {
+	display: inline;
+	position: absolute;
+	background-color: #ffffff;
+	opacity: 0.9;
 	height: 50px;
-	background-color: #e6e6e6;
-	box-shadow: 0px 1px 5px #888888;
-
+	width: 100%;
+	z-index: 0;
 }
 
 #site-navigation {
+	display: table;
 	float: left;
 	margin-top: 0;
-	padding-left: 20%;
-	padding-top: 5px;
 	width: 100%;
 	height: 50px;
-	background-color: #e6e6e6;
+/*	background-color: #e6e6e6;*/
 	position: fixed;
-	box-shadow: 0px 1px 5px #888888;	
+	box-shadow: 0px 1px 5px #888888;
+	z-index: 1;	
+}
+
+#logo {
+	height: 50px;
+	width: 200px;
+	border: 1px solid purple;
+	margin-top: 0;
+	display: table-cell;
+	position: absolute;
+	z-index: 1;
+}
+
+#logo h1 {
+	font-family: "Gill Sans";
+	font-size: 30px;
+}
+
+#nav-links {
+	float: right;
+	display: table-cell;
+	padding: 15px 20px 0px 0px;
+	z-index: 1;
 }
 
 #primary {
@@ -436,17 +461,6 @@ text-align: center;
 
 /* Navigation */
 
-#thsp-sticky-header a {
-	font-family: "Gill Sans";
-	font-size: 18px;
-	text-transform: uppercase;
-}
-
-#thsp-sticky-header li a {
-	font-family: Georgia;
-	font-size: 12px;
-}
-
 .main-navigation {
 	clear: both;
 	width: 100%;
@@ -454,15 +468,15 @@ text-align: center;
 .main-navigation ul {
 	list-style: none;
 	margin: 0;
-	font-family: Georgia;
-	font-size: 12px;
+	font-family: "Gill Sans";
+	font-size: 13px;
 	text-transform: uppercase;
-	letter-spacing: 5px;
+	letter-spacing: 1px;
 }
 .main-navigation li {
 	float: left;
 	position: relative;
-	padding-left: 15px;
+	padding-left: 30px;
 }
 .main-navigation a {
 	display: block;
